upload with pic

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -45,7 +45,7 @@ section {
 }
 
 .parallax-bg {
-  background-image: url("/assets/images/top-image-pc.jpg");
+  background-image: url("https://res.cloudinary.com/rfujiwar23/image/upload/v1632988158/kamismax/top-image-pc.jpg");
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -77,7 +77,7 @@ section {
 
 .parallax-bg-bottom {
   position: relative;
-  background-image: url("/assets/images/top-image-pc.jpg");
+  background-image: url("https://res.cloudinary.com/rfujiwar23/image/upload/v1632988158/kamismax/top-image-pc.jpg");
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -175,7 +175,7 @@ section {
 }
 
 .top {
-  background-image: url("/assets/images/top-image-pc.jpg");
+  background-image: url("https://res.cloudinary.com/rfujiwar23/image/upload/v1632988158/kamismax/top-image-pc.jpg");
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -684,7 +684,7 @@ section {
 }
 @media screen and (max-width: 768px) {
   .parallax-bg, .top {
-    background-image: url("/assets/images/top-image-ph.jpg");
+    background-image: url("https://res.cloudinary.com/rfujiwar23/image/upload/v1632988159/kamismax/top-image-ph.jpg");
   }
 
   .section02 .text-area {
