check background on mobile

--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -879,6 +879,8 @@ section {
   
   .parallax-bg, .top {
     background-image: url('https://res.cloudinary.com/rfujiwar23/image/upload/v1632988159/kamismax/top-image-ph.jpg');
+    background-position: center;
+    background-size: cover;
   }
 
   .section02 {
