--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -57,7 +57,7 @@ section {
 //   padding: 5%;
 }
 .parallax-bg {
-  background-image: url('https://res.cloudinary.com/rfujiwar23/image/upload/v1632988158/kamismax/top-image-pc.jpg');
+  background: url('https://res.cloudinary.com/rfujiwar23/image/upload/v1632988158/kamismax/top-image-pc.jpg');
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -96,7 +96,7 @@ section {
 
 .parallax-bg-bottom {
   position: relative;
-  background-image: url('https://res.cloudinary.com/rfujiwar23/image/upload/v1632988158/kamismax/top-image-pc.jpg');
+  background: url('https://res.cloudinary.com/rfujiwar23/image/upload/v1632988158/kamismax/top-image-pc.jpg');
   background-attachment: fixed;
   background-position: center;
   background-size: cover;
@@ -209,7 +209,7 @@ section {
 }
 
 .top {
-  background-image: url('https://res.cloudinary.com/rfujiwar23/image/upload/v1632988158/kamismax/top-image-pc.jpg');
+    background: url('https://res.cloudinary.com/rfujiwar23/image/upload/v1632988158/kamismax/top-image-pc.jpg');
     background-attachment: fixed;
     background-position: center;
     background-size: cover;
@@ -878,7 +878,8 @@ section {
   }
   
   .parallax-bg, .top {
-    background-image: url('https://res.cloudinary.com/rfujiwar23/image/upload/v1632988159/kamismax/top-image-ph.jpg');
+    background: url('https://res.cloudinary.com/rfujiwar23/image/upload/v1632988159/kamismax/top-image-ph.jpg');
+    // background-color:#1E456E;
     background-position: center;
     background-size: cover;
   }
