--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -14,6 +14,10 @@ html {
   display: none;
 }
 
+#cta_btn {
+  display: none;
+}
+
 .white-out {
   color: white;
   user-select: none;
@@ -687,7 +691,7 @@ section {
     display: block;
     margin: auto;
     position: fixed;
-    bottom: 10px;
+    bottom: 50px;
     padding: 10px;
     border-radius: 5px;
     right: 5%;
