--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -1,12 +1,18 @@
 $kmaxOrange: #F26722;
 $kMaxBlue: rgb(143,162,173);
-
+$kMaxBlack: rgb(9,5,4);
+* {
+  margin: 0;
+  padding: 0;
+  }
+  
+  
 
 body,
 html {
   height: 100%;
   width:100%;
-  // overflow-x: hidden;
+  
   margin: 0 auto;
   // letter-spacing: 2px;
   // font-size: 10px;
@@ -36,10 +42,12 @@ html {
   border-radius: 5px;
   padding:10px 20px;
   // border-top: 1px solid #000;
-  background: $kmaxOrange;
+  background: rgb(42,144,141);
   z-index: 99999;
   box-shadow: 1px 3px 6px rgba(0,0,0,0.62);
   a {
+    margin-top: auto;
+    margin-bottom: auto; 
     color:#fff;
     font-weight: bold;
     &:hover {
@@ -84,12 +92,13 @@ section {
 }
 .parallax-bg {
   // background: url('https://res.cloudinary.com/rfujiwar23/image/upload/v1632988158/kamismax/top-image-pc.jpg');
-  background:#1E456E;
+  // background:#1E456E;
+  background:$kMaxBlack;
   // background-attachment: fixed;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100%;
+  // height: 100%;
   display: flex;
     justify-content: center;
     align-items: center;
@@ -105,10 +114,16 @@ section {
     display: flex;
     justify-content: center;
     align-items: center;
+    padding:8vh 0;
     // background:white;
     // margin-top:20vh;
     .top-title {
-      
+      .main-logo {
+        margin:8vh auto 2vh;
+        // margin-top:6vh;
+        width:75%;
+        
+      }
       .text-space {
         margin-top:5vh;
         // background:rgba(255,255,255,0.9);
@@ -287,6 +302,8 @@ section {
       h1 {
         text-align: center;
         margin-bottom:90px;
+        color: #fff;
+        text-shadow: 1px 3px 3px rgba(0,0,0,0.62);
       }
       .main-points {
         display: flex;
@@ -692,6 +709,12 @@ section {
   }
 }
 
+@media screen and (min-width: 1200px) {
+  .parallax-bg {
+    max-width: 100%;
+  }
+}
+
 
 @media screen and (max-width:1200px) {
   .section03 {
@@ -801,6 +824,12 @@ section {
   }
 }
 
+@media screen and (max-width:1520px) {
+  body {
+    width: 100%;
+  }
+}
+
 @media screen and (max-width:1089px) {
   .section06 {
     .container-fluid {
@@ -810,6 +839,12 @@ section {
         }
       }
     }
+  }
+}
+
+@media screen and (min-width:992px){
+  body {
+    overflow-x: hidden;
   }
 }
 
@@ -883,6 +918,10 @@ section {
     }
   }
 
+  html {
+    overflow-x: hidden;
+  }
+
 }
 
 
@@ -906,7 +945,7 @@ section {
   }
   
   .top {
-    background: url('https://res.cloudinary.com/rfujiwar23/image/upload/v1632988159/kamismax/top-image-ph.jpg');
+    background: url('../images/top-image-ph.jpg');
     // background:#1E456E;
     // background-color:#1E456E;
     background-position: center;
@@ -914,7 +953,7 @@ section {
   }
 
   .parallax-bg-bottom {
-    background: url('https://res.cloudinary.com/rfujiwar23/image/upload/v1632988159/kamismax/top-image-ph.jpg');
+    background: url('../images/top-image-ph.jpg');
     // background:#1E456E;
     // background-color:#1E456E;
     background-position: center;
@@ -1062,8 +1101,8 @@ section {
       // background:$kmaxOrange;
       h1 {
         text-align: center;
-        margin-bottom:70px;
-        font-size:1.5em;
+        margin:5vh 0;
+        font-size:2em;
       }
       .main-points {
         display: flex;
