--- a/assets/css/index.scss
+++ b/assets/css/index.scss
@@ -138,13 +138,13 @@ section {
 }
 
 .parallax-bg-bottom {
-  position: relative;
+  // position: relative;
   background: url('https://res.cloudinary.com/rfujiwar23/image/upload/v1632988158/kamismax/top-image-pc.jpg');
   // background-attachment: fixed;
   background-position: center;
   background-size: cover;
   background-repeat: no-repeat;
-  height: 100%;
+  // height: 100%;
   
   .logo {
     width:45%;
@@ -188,7 +188,7 @@ section {
     }
   }
   footer {
-    position:absolute;
+    position:relative;
     bottom:0;
     right:0;
     left:0;
@@ -615,6 +615,7 @@ section {
     }
     .video-iframe {
       padding:0;
+      box-shadow: 1px 3px 6px rgba(0,0,0,0.62);
       video {
         width:100%;
       }
@@ -958,6 +959,7 @@ section {
     // background-color:#1E456E;
     background-position: center;
     background-size: cover;
+    // position: relative;
   }
 
   .section02 {
@@ -1036,7 +1038,7 @@ section {
 
 @media screen and (max-width:576px) {
   .parallax-bg-bottom {
-    overflow-y: scroll;
+    // overflow-y: scroll;
     footer {
       margin-top:10vh;
       position:relative;
@@ -1161,6 +1163,7 @@ section {
       .overlay-text {
         h3 {
           font-size: 2em;
+          line-height: 2em;
         }
       }
     }
@@ -1185,6 +1188,8 @@ section {
   }
   .parallax-bg-bottom {
     overflow-y: scroll;
+    // height:200%;
+    // padding:3vh 0;
     .container {
       padding-left: 0;
       padding-right: 0;
@@ -1247,7 +1252,7 @@ section {
     .sect09-sect {
       .overlay-text {
         h3 {
-          font-size: 1.75em;
+          font-size: 1.5em;
         }
       }
     }
@@ -1351,7 +1356,7 @@ section {
                   font-size: 1em;
                 }
                 p {
-                  font-size:0.85em;
+                  font-size:0.8em;
                 }
               }
             }
